--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -10,6 +10,7 @@
         padding: 3rem 0;
         .right-items{
             margin-left: 2rem;
+            font-size:16px;
         }
         img{
             padding: 1rem;
